# capstone-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cpp/: test  test.cpp
gtkmm-prototyping/: simple.cpp
include/: CMakeLists.txt
python-prototyping/: main.py
src/: AppInfo.h.in  CMakeLists.txt  main.cpp
src/Application/: Application.cpp  Application.h  CMakeLists.txt
src/BackgroundWindow/: BackgroundWindow.cpp  BackgroundWindow.h  CMakeLists.txt
src/ControlWindow/: CMakeLists.txt  ControlWindow.cpp  ControlWindow.h
src/VLCWidget/: CMakeLists.txt  VLCWidget.cpp  VLCWidget.h  vlc_args.h
